# whendone

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/whendone/: __init__.py  whendone.py
tests/: test_whendone.py
