[tool.poetry]
name = "whendone"
version = "1.2.0"
description = "Python package to notify you when your function is done through Telegram and/or Slack!"
authors = ["Sabri Barac"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
slack-sdk = "^3.19.5"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
